[package]
name = "hyper-websocket"
version = "0.1.0"
authors = ["Michael Smith <michael@spinda.net>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"

[dependencies.hyper]
git = "https://github.com/spinda/hyper"
rev = "fa9ca95d13a4bca29e10555887e6ad5de09aaaee"

# Select the minimum subset of features we need, so we don't force the inclusion
# of eg. TLS support unnecessarily.
[dependencies.websocket]
version = "0.20"
default-features = false
features = ["async"]

[dev-dependencies]
tokio-core = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
